@@ -1,3 +1,7 @@
+2008-05-06 David Barnett <daviebdawg@gmail.com>
+  * [gpasm] Fixed symbol problems for labels on blank lines in data sections
+  (bug #1943487)
+
 2008-05-05 David Barnett <daviebdawg@gmail.com>
   * [gpasm] Applied patch by Borut Razem to fix buffer overflow in LST file
   generation (bug #1922419)
